# roch

./: README.md
roch/: CHANGELOG.rst  CMakeLists.txt  package.xml
roch_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
roch_bringup/config/: fake_roch_arbotix.yaml
roch_bringup/debian/: ros-indigo-roch-bringup.udev
roch_bringup/env-hooks/: 25.roch.sh.em  50.roch_find_mag_config.sh
roch_bringup/interactions/: admin.interactions  documentation.interactions  pairing.interactions  rocon_interactions_test.interactions  visualisation.interactions
roch_bringup/launch/: concert_client.launch  concert_minimal.launch  minimal.launch  minimal_sensors.launch  sensor.launch
roch_bringup/launch/includes/: capabilities.launch.xml  description.launch.xml  mobile_base.launch.xml  robot.launch.xml
roch_bringup/launch/includes/3dsensor/: r200.launch.xml
roch_bringup/launch/includes/laser/: ls01c.launch.xml  rplidar.launch.xml  sicklmsxx.launch.xml
roch_bringup/launch/includes/roch/: mobile_base.launch.xml  safety_controller.launch.xml  sensorpc.launch.xml
roch_bringup/launch/test/: rviz_markers.launch
roch_bringup/param/: base.yaml  laser.yaml  smoother.yaml
roch_bringup/param/capabilities/: defult_capabilities_providers.yaml
roch_bringup/param/capabilities/3dsenor/astra/: capability_providers.yaml
roch_bringup/param/capabilities/3dsenor/asus_xtion_pro/: capability_providers.yaml
roch_bringup/param/capabilities/3dsenor/kinect/: capability_providers.yaml
roch_bringup/param/capabilities/3dsenor/r200/: capability_providers.yaml
roch_bringup/param/capabilities/laser/ls01c/: capability_providers.yaml
roch_bringup/param/capabilities/laser/rplidar/: capability_providers.yaml
roch_bringup/param/capabilities/roch/: capability_providers.yaml  diagnostics.yaml
roch_bringup/param/laser/ls01c/: laser.yaml
roch_bringup/param/laser/rplidar/: laser.yaml
roch_bringup/scripts/: install
roch_bringup/test/: app_manager_with_capabilities.launch  rocon_interactions.launch
roch_bringup/udev/: 41-ls01c.rules  41-roch.rules  README.md
roch_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
roch_control/config/: control.yaml  description.txt  imu_sensor_controller.yaml  localization.yaml  twist_mux.yaml
roch_control/launch/: control.launch
roch_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
roch_description/env-hooks/: 50.roch_description.sh
roch_description/launch/: description.launch
roch_description/meshes/: chassis.dae  wheel.dae
roch_description/meshes/sensors/: ls_01c.stl  xtion_pro_stack.dae
roch_description/meshes/stacks/: plate_bottom.dae  plate_middle.dae  plate_sensor.dae  pole_bottom.dae  pole_top.dae
roch_description/robots/: roch_standard_asus_xtion_pro.urdf.xacro  roch_standard_asus_xtion_pro_ls01c.urdf.xacro  roch_standard_asus_xtion_pro_offset.urdf.xacro  roch_standard_asus_xtion_pro_offset_ls01c.urdf.xacro  roch_standard_asus_xtion_pro_offset_rplidar.urdf.xacro  roch_standard_asus_xtion_pro_rplidar.urdf.xacro  roch_standard_kinect.urdf.xacro  roch_standard_kinect_ls01c.urdf.xacro  roch_standard_kinect_rplidar.urdf.xacro  roch_standard_ls01c.urdf.xacro  roch_standard_r200.urdf.xacro  roch_standard_r200_ls01c.urdf.xacro  roch_standard_r200_rplidar.urdf.xacro  roch_standard_rplidar.urdf.xacro
roch_description/urdf/: common_properties.urdf.xacro  roch.urdf.xacro  roch_gazebo.urdf.xacro  roch_library.urdf.xacro  roch_properties.urdf.xacro  roch_sensors.urdf.xacro  wheel.urdf.xacro
roch_description/urdf/sensors/: asus_xtion_pro.urdf.xacro  asus_xtion_pro_offset.urdf.xacro  kinect.urdf.xacro  kinect_camera.urdf.xacro  ls_ls01c.urdf.xacro  r200.urdf.xacro  rplidar.urdf.xacro
roch_description/urdf/stacks/standard/: standard.urdf.xacro  参数表.txt
roch_follower/: CHANGELOG.rst  CMakeLists.txt  package.xml
roch_follower/cfg/: Follower.cfg
roch_follower/launch/: follower.launch
roch_follower/launch/includes/: safety_controller.launch.xml  velocity_smoother.launch.xml
roch_follower/plugins/: nodelets.xml
roch_follower/src/: follower.cpp
roch_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
roch_msgs/msg/: CliffEvent.msg  PSDEvent.msg  RochStatus.msg  SensorState.msg  UltEvent.msg  WheelDropEvent.msg
roch_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
roch_navigation/env-hooks/: 25.roch-navigation.sh.em  50.roch_navigation.sh
roch_navigation/launch/: amcl.launch  amcl_demo.launch  amcl_without_sensor.launch  gmapping_demo.launch  gmapping_without_sensor.launch  move_base.launch
roch_navigation/launch/includes/: ls01c_amcl.launch  r200_amcl.launch  r200_gmapping.launch  rplidar_amcl.launch  rplidar_gmapping.launch  safety_controller.launch.xml  sicklmsxx_amcl.launch  velocity_smoother.launch.xml
roch_navigation/maps/: map_201606031530.yaml  map_201609191751.yaml  s2_map.yaml
roch_navigation/param/: astra_global_costmap_params.yaml  astra_local_costmap_params.yaml  asus_xtion_pro_offset_costmap_common_params.yaml  base_local_planner_params.yaml  dwa_local_planner_params.yaml  kinect_global_costmap_params.yaml  kinect_local_costmap_params.yaml  ls01c_costmap_common_params.yaml  ls01c_local_costmap_params.yaml  move_base_params.yaml  r200_costmap_common_params.yaml  r200_local_costmap_params.yaml  rplidar_costmap_common_params.yaml  rplidar_global_costmap_params.yaml  sicklmsxx_costmap_common_params.yaml  sicklmsxx_global_costmap_params.yaml
roch_rapps/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
roch_rapps/rapps/2dlaser/: 2dlaser.interface  2dlaser.launch  2dlaser.rapp
roch_rapps/rapps/3dsensor/: 3dsensor.interface  3dsensor.launch  3dsensor.rapp
roch_rapps/rapps/follower/: follower.interface  follower.launch  follower.rapp
roch_teleop/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
roch_teleop/launch/: keyboard_teleop.launch  logitech.launch  ps3_teleop.launch  xbox360_teleop.launch
roch_teleop/launch/includes/: velocity_smoother.launch.xml
roch_teleop/scripts/: roch_teleop_key
roch_teleop/src/: roch_joy.cpp  roch_xbox_joy.cpp
(+18 files in other folders)
