<package>
  <name>roch</name>
  <version>2.0.11</version>
  <description>roch Project</description>
  <maintainer email="wzhang@softrobtech.com">Carl</maintainer>

  <license>BSD</license>

  <author email="wzhang@softrobtech.com">Carl</author>
  <url type="website">http://ros.org/wiki/roch</url>
  <url type="bugtracker">https://github.com/roch/roch/issues</url>
  <url type="repository">https://github.com/roch/roch</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>roch_navigation</run_depend> 
  <run_depend>roch_teleop</run_depend> 
  <run_depend>roch_follower</run_depend> 
  <run_depend>roch_rapps</run_depend> 

  <export>
    <metapackage/>
  </export>
</package>
