<package>
  <name>roch</name>
  <version>1.0.17</version>
  <description>roch Project</description>
  <maintainer email="gchen@soyrobotics.com">Chen</maintainer>

  <license>BSD</license>

  <author email="gchen@soyrobotics.com">Chen</author>
  <url type="website">http://ros.org/wiki/roch</url>
  <url type="bugtracker">https://github.com/Soy-Robotics/roch/issues</url>
  <url type="repository">https://github.com/Soy-Robotics/roch</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>roch_bringup</run_depend>
  <run_depend>roch_navigation</run_depend> 
  <run_depend>roch_teleop</run_depend> 
  <run_depend>roch_follower</run_depend> 

  <export>
    <metapackage/>
  </export>
</package>
