<?xml version="1.0"?>
<package>
  <name>roch_bringup</name>
  <version>1.0.16</version>
  <description>Soy roch installation and integration package</description>

  <author email="carlzhang@soyrobotics.com">Carl</author>

  <maintainer email="carlzhang@soyrobotics.com">Carl</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/Soy-Robotics/roch/issues</url>
  <url type="repository">https://github.com/Soy-Robotics/roch</url>
  <url type="website">http://ros.org/wiki/roch_bringup</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>realsense_camera</run_depend>
  <run_depend>rocon_bubble_icons</run_depend>
  <run_depend>rplidar_ros</run_depend>
  <run_depend>roch_base</run_depend>
  <run_depend>roch_control</run_depend>
  <run_depend>roch_description</run_depend>
  <run_depend>roch_safety_controller</run_depend>
  <run_depend>roch_sensorpc</run_depend>
<!--  <run_depend>roch_viz</run_depend>-->
  <run_depend>imu_filter_madgwick</run_depend>
  <run_depend>imu_transformer</run_depend>
  <run_depend>microstrain_3dmgx2_imu</run_depend>
  <run_depend>nmea_comms</run_depend>
  <run_depend>python-scipy</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>freenect_launch</run_depend>
  <run_depend>astra_launch</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>zeroconf_avahi</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>laser_filters</run_depend>
  <run_depend>rgbd_launch</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>lms1xx</run_depend>

  <export>
  </export>
</package>
