<package>
  <name>roch_follower</name>
  <version>1.0.17</version>
  <description>
       Follower for the roch. Follows humans and robots around by following the centroid of a box points in front of the roch.
  </description>

  <maintainer email="gchen@softrobetch.com">Chen</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/roch_follower</url>
  <url type="bugtracker">https://github.com/Soy-Robotics/roch/issues</url>
  <url type="repository">https://github.com/Soy-Robotics/roch</url>


  <author email="tony.pratkanis@to.do">Tony Pratkanis</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>depth_image_proc</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roch_msgs</build_depend>
  
  <run_depend>depth_image_proc</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>roch_bringup</run_depend>
  <run_depend>roch_teleop</run_depend>
  <run_depend>roch_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelets.xml" />
  </export>
</package>
