<?xml version="1.0"?>
<package>
  <name>roch_navigation</name>
  <version>1.0.16</version>
  <description>Autonomous mapping and navigation demos for the Soy Roch</description>

  <author email="carlzhang@soyrobotics.com">Carl</author>

  <maintainer email="carlzhang@soyrobotics.com">Carl</maintainer>

  <url type="website">http://ros.org/wiki/roch_navigation</url>
  <url type="bugtracker">https://github.com/Soy-Robotics/roch/issues</url>
  <url type="repository">https://github.com/Soy-Robotics/roch</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>amcl</run_depend>
  <run_depend>frontier_exploration</run_depend>
  <run_depend>yocs_cmd_vel_mux</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roch_bringup</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roch_safety_controller</run_depend>

  <export>
  </export>
</package>
