<package>
  <name>roch_teleop</name>
   <version>1.0.9</version>
  <description>SawYer roch controller configurations</description>

  <author email="wzhang@softrobtech.com">Carl</author>

  <maintainer email="wzhang@softrobtech.com">Carl</maintainer>
  <url type="website">http://ros.org/wiki/roch_teleop</url>
  <url type="bugtracker">https://github.com/roch/roch/issues</url>
  <url type="repository">https://github.com/roch/roch</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>

  <build_depend>roslaunch</build_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>yocs_cmd_vel_mux</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>
</package>
